refactor: followerCount column for improved performance and preparation for sorting by followers
Signed-off-by: jaivalis <johnaivalis@gmail.com>